--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <main>
     <h1>PLANES DE ALIMENTACIÓN<br>SEGÚN TUS NECESIDADES</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-    <a href="#">¡Registrate gratis!</a>
+    <a href="#" class="btn">¡Registrate gratis!</a>
     <img src="assets/filete-pollo-cubierto-sesamo-blanco-guisantes-tomates-brocoli-calabaza-plato-blanco-removebg-preview%201.png" alt="Plato saludable">
 </main>
 
