--- a/registro.html
+++ b/registro.html
@@ -40,7 +40,7 @@
             </div>
             <div class="flex-column">
                 <label for="correo">Correo electrónico</label>
-                <input type="text">
+                <input type="email">
             </div>
             <div class="flex-column">
                 <label for="fecha">Fecha de nacimiento</label>
