--- a/perfil.html
+++ b/perfil.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header>
+    <header id="encabezado">
         <div class="header-uno">
             <div>
                 <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
