--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -13,12 +13,12 @@
 </head>
 <body>
 
-<header>
-    <div>
+<header id="encabezado">
+    <div class="header-uno">
         <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
         <h2>REPOLLO APP</h2>
     </div>
-    <div>
+    <div class="header-dos">
         <i class="fa-solid fa-user"></i>
         <a href="#">Iniciar sesión</a>
         <a href="#">Registrarme</a>
