el responsive despues(?

--- a/perfil.html
+++ b/perfil.html
@@ -31,9 +31,9 @@
         </div>
         <nav class="header-dos">
             <ul>
-                <li><a href="">Perfil</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
                 <li><a href="">Dieta</a></li>
-                <li><a href="">Progreso</a></li>
+                <li><a href="proceso.html">Progreso</a></li>
             </ul>
         </nav>
     </header>
