--- a/registro.html
+++ b/registro.html
@@ -20,7 +20,7 @@
     </div>
     <div>
         <i class="fa-solid fa-user"></i>
-        <a href="#">Iniciar sesión</a>
+        <a href="iniciarsesion.html">Iniciar sesión</a>
         <a href="#">Registrarme</a>
     </div>
 </header>
