--- a/registro.html
+++ b/registro.html
@@ -13,19 +13,15 @@
 </head>
 <body>
 
-<header id="encabezado">
-    <div class="header-uno">
+<header>
+    <div>
         <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
         <h2>REPOLLO APP</h2>
     </div>
-    <div class="header-dos>
+    <div>
         <i class="fa-solid fa-user"></i>
         <a href="iniciarsesion.html">Iniciar sesión</a>
-<<<<<<< HEAD
         <a href="#">Registrarme</a>
-=======
-        <a href="registro.html">Registrarme</a>
->>>>>>> origin
     </div>
 </header>
 <main class="flex-row">
