--- a/registro.html
+++ b/registro.html
@@ -20,8 +20,8 @@
     </div>
     <div>
         <i class="fa-solid fa-user"></i>
-        <a href="iniciarsesion.html">Iniciar sesión</a>
-        <a href="#">Registrarme</a>
+        <a href="">Iniciar sesión</a>
+        <a href="">Registrarme</a>
     </div>
 </header>
 <main class="flex-row">
