--- a/perfil.html
+++ b/perfil.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header id="encabezado">
+    <header>
         <div class="header-uno">
             <div>
                 <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
@@ -25,7 +25,7 @@
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="#">Mi cuenta</a>
+                <a href="perfil.html">Mi cuenta</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
             </div>
         </div>
