--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repollo APP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
     <div class="header-dos">
         <i class="fa-solid fa-user"></i>
         <a href="#">Iniciar sesión</a>
-        <a href="#">Registrarme</a>
+        <a href="#">Registro</a>
     </div>
 </header>
 <main class="flex-row">
@@ -32,7 +33,9 @@
             <input type="email" name="email" id="email">
             <label for="pass">Contraseña</label>
             <input type="password" name="pass" id="pass">
-            <input type="submit" value="Iniciar sesión" class="btn" id="boton">
+            <div class="cont-btn">
+                <input type="submit" value="Iniciar sesión" class="btn" id="boton">
+            </div>
         </form>
     </article>
     <div id="popup" class="d-none">
