espero que quede responsive

--- a/perfil.html
+++ b/perfil.html
@@ -18,17 +18,7 @@
 
 <body>
 
-    <header>
-        <div class="header-uno">
-            <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-            <h2>REPOLLO APP</h2>
-        </div>
-        <div class="header-dos">
-            <a href="#">Ayuda</a>
-            <a href="perfil.html" class="nowrap mi-cuenta">Mi cuenta</a>
-            <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
-        </div>
-        
+    <header id="encabezado">
             <div class="header-uno">
                 <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
                 <h2>REPOLLO APP</h2>
@@ -37,9 +27,7 @@
                 <a href="#">Ayuda</a>
                 <a href="perfil.html">Mi cuenta</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
-            </div>
-        </div>
-        
+            </div>   
     </header>
     <nav>
         <ul>
