--- a/proceso.html
+++ b/proceso.html
@@ -17,26 +17,24 @@
 
 <body>
 
-    <header>
+    <header id="encabezado">
         <div class="header-uno">
-            <div>
-                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-                <h2>REPOLLO APP</h2>
-            </div>
-            <div>
-                <a href="#">Ayuda</a>
-                <a href="perfil.html">Mi cuenta</a>
-                <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
-            </div>
+            <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+            <h2>REPOLLO APP</h2>
         </div>
-        <nav class="header-dos">
-            <ul>
-                <li><a href="perfil.html">Perfil</a></li>
-                <li><a href="">Dieta</a></li>
-                <li><a href="proceso.html">Progreso</a></li>
-            </ul>
-        </nav>
+        <div class="header-dos">
+            <a href="#">Ayuda</a>
+            <a href="perfil.html">Mi cuenta</a>
+            <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
+        </div>  
     </header>
+    <nav>
+        <ul>
+            <li><a href="perfil.html">Perfil</a></li>
+            <li><a href="">Dieta</a></li>
+            <li><a href="proceso.html">Progreso</a></li>
+        </ul>
+    </nav>
     <main>
 
         <article class="peso">
