--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<header>
+<header id="encabezado">
     <div>
         <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
         <h2>REPOLLO APP</h2>
