intento de responsive 1

--- a/proceso.html
+++ b/proceso.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repollo APP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,9 +49,11 @@
                     reducción de peso. Sin embargo, se observa un
                     mes específico en el que se registró un ligero
                     aumento en el peso.</p>
-                <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Registrar nuevo peso</a>
             </div>
-            <img src="assets/peso.jpeg" alt="grafico de peso" style="width: 350px;">
+            <div>
+                <img src="assets/peso.jpeg" alt="grafico de peso">
+            </div>
+            <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Registrar nuevo peso</a>
         </article>
 
         <article class="peso">
@@ -62,9 +65,12 @@
                     corporales durante todos los meses, indicando un
                     progreso notable hacia los objetivos de salud y
                     bienestar.</p>
-                <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Registrar nuevas medidas</a>
+               
             </div>
-            <img src="assets/medidas.jpeg" alt="grafico de medidas" style="width: 350px;">
+            <div>
+                <img src="assets/medidas.jpeg" alt="grafico de medidas">
+            </div>
+            <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Registrar nuevas medidas</a>
         </article>
     </main>
     <footer>
