--- a/home.html
+++ b/home.html
@@ -13,17 +13,26 @@
 </head>
 <body>
 
-<header id="encabezado">
-    <div class="header-uno">
-        <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-        <h2>REPOLLO APP</h2>
-    </div>
-    <div class="header-dos">
-        <i class="fa-solid fa-user"></i>
-        <a href="iniciarsesion.html">Iniciar sesión</a>
-        <a href="registro.html">Registrarme</a>
-    </div>
-</header>
+    <header>
+        <div class="header-uno">
+            <div>
+                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                <h2>REPOLLO APP</h2>
+            </div>
+            <div>
+                <a href="#">Ayuda</a>
+                <a href="perfil.html">Mi cuenta</a>
+                <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
+            </div>
+        </div>
+        <nav class="header-dos">
+            <ul>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="">Dieta</a></li>
+                <li><a href="proceso.html">Progreso</a></li>
+            </ul>
+        </nav>
+    </header>
 <main>
     <h1>PLANES DE ALIMENTACIÓN<br>SEGÚN TUS NECESIDADES</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
