--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -13,17 +13,26 @@
 </head>
 <body>
 
-<header id="encabezado">
-    <div class="header-uno">
-        <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-        <h2>REPOLLO APP</h2>
-    </div>
-    <div class="header-dos">
-        <i class="fa-solid fa-user"></i>
-        <a href="#">Iniciar sesión</a>
-        <a href="#">Registrarme</a>
-    </div>
-</header>
+    <header>
+        <div class="header-uno">
+            <div>
+                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                <h2>REPOLLO APP</h2>
+            </div>
+            <div>
+                <a href="#">Ayuda</a>
+                <a href="perfil.html">Mi cuenta</a>
+                <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
+            </div>
+        </div>
+        <nav class="header-dos">
+            <ul>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="">Dieta</a></li>
+                <li><a href="proceso.html">Progreso</a></li>
+            </ul>
+        </nav>
+    </header>
 <main class="flex-row">
     <article class="art-form">
         <h1>Iniciar sesión</h1>
