responsive del header NO LO TOQUEN

--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -22,7 +22,7 @@
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html">Mi cuenta</a>
+                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
             </div>
         </div>
