--- a/perfil.html
+++ b/perfil.html
@@ -18,24 +18,26 @@
 
 <body>
 
-    <header id="encabezado">
-            <div class="header-uno">
+    <header>
+        <div class="header-uno">
+            <div>
                 <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
                 <h2>REPOLLO APP</h2>
             </div>
-            <div class="header-dos">
+            <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html">Mi cuenta</a>
+                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
-            </div>   
+            </div>
+        </div>
+        <nav class="header-dos">
+            <ul>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="">Dieta</a></li>
+                <li><a href="proceso.html">Progreso</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="perfil.html">Perfil</a></li>
-            <li><a href="">Dieta</a></li>
-            <li><a href="proceso.html">Progreso</a></li>
-        </ul>
-    </nav>
     <main>
 
         <article class="personal">
