--- a/registro.html
+++ b/registro.html
@@ -14,17 +14,26 @@
 </head>
 <body>
 
-<header id="encabezado">
-    <div>
-        <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-        <h2>REPOLLO APP</h2>
-    </div>
-    <div class="header-dos">
-        <i class="fa-solid fa-user"></i>
-        <a href="iniciarsesion.html" class="nowrap">Iniciar sesión</a>
-        <a href="registro.html">Registro</a>
-    </div>
-</header>
+    <header>
+        <div class="header-uno">
+            <div>
+                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                <h2>REPOLLO APP</h2>
+            </div>
+            <div>
+                <a href="#">Ayuda</a>
+                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
+                <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
+            </div>
+        </div>
+        <nav class="header-dos">
+            <ul>
+                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="">Dieta</a></li>
+                <li><a href="proceso.html">Progreso</a></li>
+            </ul>
+        </nav>
+    </header>
 <main class="flex-row">
     <article class="art-form">
         <h1>Registrarme</h1>
@@ -62,9 +71,8 @@
             </div>
         </form>
     </article>
-    <article class="cont-img">
-        <img src="assets/registro.jpg" alt="Imagen de alimentos saludables">
-    </article>
+        <img src="assets/registro.jpg" alt="Imagen de alimentos saludables" class="img-reg">
+
     
 
 
