--- a/home.html
+++ b/home.html
@@ -21,17 +21,9 @@
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
-                <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
+                <a href="perfil.html" class="mi-cuenta">Iniciar Sesión</a>
             </div>
         </div>
-        <nav class="header-dos">
-            <ul>
-                <li><a href="perfil.html">Perfil</a></li>
-                <li><a href="">Dieta</a></li>
-                <li><a href="proceso.html">Progreso</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <h1>PLANES DE ALIMENTACIÓN<br>SEGÚN TUS NECESIDADES</h1>
