--- a/home.html
+++ b/home.html
@@ -25,10 +25,11 @@
             </div>
         </div>
     </header>
+
     <main>
         <h1>PLANES DE ALIMENTACIÓN<br>SEGÚN TUS NECESIDADES</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-        <a href="#" class="btn">¡Registrate gratis!</a>
+        <a href="registro.html" class="btn">¡Registrate gratis!</a>
         <img src="assets/filete-pollo-cubierto-sesamo-blanco-guisantes-tomates-brocoli-calabaza-plato-blanco-removebg-preview%201.png" alt="Plato saludable">
     </main>
 
@@ -45,10 +46,10 @@
         <div>
             <h6>Menú</h6>
             <ul>
-                <li>Inicio</li>
-                <li>Ingresar</li>
-                <li>Contacto</li>
-                <li>Acerca de nosotros</li>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="iniciarsesion.html">Ingresar</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Acerca de nosotros</a></li>
             </ul>
         </div>
         <div>
