--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -62,10 +62,10 @@
     <div>
         <h6>Menú</h6>
         <ul>
-            <li>Inicio</li>
-            <li>Ingresar</li>
-            <li>Contacto</li>
-            <li>Acerca de nosotros</li>
+            <li><a href="home.html">Inicio</a></li>
+            <li><a href="iniciarsesion.html">Ingresar</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Acerca de nosotros</a></li>
         </ul>
     </div>
     <div>
