--- a/perfil.html
+++ b/perfil.html
@@ -33,7 +33,7 @@
         <nav class="header-dos">
             <ul>
                 <li><a href="perfil.html">Perfil</a></li>
-                <li><a href="">Dieta</a></li>
+                <li><a href="dieta.html">Dieta</a></li>
                 <li><a href="proceso.html">Progreso</a></li>
             </ul>
         </nav>
@@ -128,10 +128,10 @@
         <div>
             <h6>Links útiles</h6>
             <ul>
-                <li>Inicio</li>
-                <li>Perfil</li>
-                <li>Dieta</li>
-                <li>Progreso</li>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="iniciarsesion.html">Ingresar</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Acerca de nosotros</a></li>
             </ul>
         </div>
         <div>
