--- a/proceso.html
+++ b/proceso.html
@@ -86,10 +86,10 @@
         <div>
             <h6>Links útiles</h6>
             <ul>
-                <li>Inicio</li>
-                <li>Perfil</li>
-                <li>Dieta</li>
-                <li>Progreso</li>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="iniciarsesion.html">Ingresar</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Acerca de nosotros</a></li>
             </ul>
         </div>
         <div>
