--- a/registro.html
+++ b/registro.html
@@ -58,7 +58,8 @@
                 </div>
             </div>
             <div class="cont-btn">
-                <input type="submit" value="Registrarme" class="btn">
+                <a href="perfil.html" class="btn">Registrarme</a>
+                <!--input type="submit" value="Registrarme" class="btn"-->
             </div>
         </form>
     </article>
@@ -82,10 +83,10 @@
     <div>
         <h6>Menú</h6>
         <ul>
-            <li>Inicio</li>
-            <li>Ingresar</li>
-            <li>Contacto</li>
-            <li>Acerca de nosotros</li>
+            <li><a href="home.html">Inicio</a></li>
+            <li><a href="iniciarsesion.html">Ingresar</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Acerca de nosotros</a></li>
         </ul>
     </div>
     <div>
