--- a/home.html
+++ b/home.html
@@ -16,12 +16,15 @@
     <header>
         <div class="header-uno">
             <div>
-                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-                <h2>REPOLLO APP</h2>
+                <a href="home.html" style="display: flex; flex-direction: row; align-items: center;">
+                    <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                    <h2>REPOLLO APP</h2>
+                </a>
+
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html" class="mi-cuenta">Iniciar Sesión</a>
+                <a href="iniciarsesion.html" class="mi-cuenta">Iniciar Sesión</a>
             </div>
         </div>
     </header>
@@ -35,16 +38,16 @@
 
     <footer>
         <div>
-            <h6>Co-Fouders</h6>
+            <h6>Especialistas</h6>
             <ul>
-                <li>Diaz, Brenda</li>
-                <li>Eldahuk, Ibi</li>
-                <li>Fernández, Guadalupe</li>
-                <li>Navarro, Eliana</li>
+                <li>Lic. Brenda Díaz</li>
+                <li>Ing. Ibi Eldahuk</li>
+                <li>Ing. Guadalupe Fernández</li>
+                <li>Lic. Eliana Navarro</li>
             </ul>
         </div>
         <div>
-            <h6>Menú</h6>
+            <h6>Links útiles</h6>
             <ul>
                 <li><a href="home.html">Inicio</a></li>
                 <li><a href="iniciarsesion.html">Ingresar</a></li>
