--- a/perfil.html
+++ b/perfil.html
@@ -21,12 +21,15 @@
     <header>
         <div class="header-uno">
             <div>
-                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-                <h2>REPOLLO APP</h2>
+                <a href="home.html" style="display: flex; flex-direction: row; align-items: center;">
+                    <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                    <h2>REPOLLO APP</h2>
+                </a>
+
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
+                <a href="home.html" class="mi-cuenta">Cerrar sesión</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
             </div>
         </div>
@@ -34,11 +37,10 @@
             <ul>
                 <li><a href="perfil.html">Perfil</a></li>
                 <li><a href="dieta.html">Dieta</a></li>
-                <li><a href="proceso.html">Progreso</a></li>
+                <li><a href="progreso.html">Progreso</a></li>
             </ul>
         </nav>
     </header>
-    <main>
 
         <article class="personal">
             <div>
@@ -46,8 +48,8 @@
                 <p><span>Nombre:</span> Lina Montenegro</p>
                 <p><span>Fecha de nacimiento:</span> 16.01.1997</p>
                 <p><span>Correo electrónico:</span> linam@gmail.com</p>
-                <p><span>Altura:</span> 167cm</p>
-                <p><span>Peso:</span> 26 años</p>
+                <p><span>Altura:</span> 26 años</p>
+                <p><span>Peso:</span> 167cm</p>
                 <div class="cont-btn">
                     <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Modificar datos</a>
                 </div>
