--- a/registro.html
+++ b/registro.html
@@ -17,8 +17,11 @@
     <header>
         <div class="header-uno">
             <div>
-                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-                <h2>REPOLLO APP</h2>
+                <a href="home.html" style="display: flex; flex-direction: row; align-items: center;">
+                    <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                    <h2>REPOLLO APP</h2>
+                </a>
+
             </div>
             <div>
                 <a href="#">Ayuda</a>
@@ -42,6 +45,10 @@
             <div class="flex-column">
                 <label for="correo">Correo electrónico</label>
                 <input type="email">
+            </div>
+            <div class="flex-column">
+                <label for="password">Contraseña</label>
+                <input type="password">
             </div>
             <div class="flex-column">
                 <label for="fecha">Fecha de nacimiento</label>
