--- a/progreso.html
+++ b/progreso.html
@@ -21,20 +21,23 @@
     <header>
         <div class="header-uno">
             <div>
-                <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
-                <h2>REPOLLO APP</h2>
+                <a href="home.html" style="display: flex; flex-direction: row; align-items: center;">
+                    <img src="assets/cabbage-svgrepo-com.svg" alt="Logo de Repollo App" id="logo">
+                    <h2>REPOLLO APP</h2>
+                </a>
+
             </div>
             <div>
                 <a href="#">Ayuda</a>
-                <a href="perfil.html" class="mi-cuenta">Mi cuenta</a>
+                <a href="home.html" class="mi-cuenta">Cerrar sesión</a>
                 <img src="assets/user.jpg" alt="Imagen de usuario" style="width:70px; border-radius:50%">
             </div>
         </div>
         <nav class="header-dos">
             <ul>
                 <li><a href="perfil.html">Perfil</a></li>
-                <li><a href="">Dieta</a></li>
-                <li><a href="proceso.html">Progreso</a></li>
+                <li><a href="dieta.html">Dieta</a></li>
+                <li><a href="progreso.html">Progreso</a></li>
             </ul>
         </nav>
     </header>
