--- a/perfil.html
+++ b/perfil.html
@@ -48,8 +48,9 @@
                 <p><span>Nombre:</span> Lina Montenegro</p>
                 <p><span>Fecha de nacimiento:</span> 16.01.1997</p>
                 <p><span>Correo electrónico:</span> linam@gmail.com</p>
-                <p><span>Altura:</span> 26 años</p>
-                <p><span>Peso:</span> 167cm</p>
+                <p><span>Altura:</span> 167cm</p>
+                <p><span>Peso:</span> 75kg</p>
+                <p><span>Edad:</span> 26 años</p>
                 <div class="cont-btn">
                     <a href="" class="btn"><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;&nbsp;Modificar datos</a>
                 </div>
@@ -95,7 +96,7 @@
                     <div><input type="checkbox" name="" id=""><label for="">&nbsp;&nbsp;&nbsp;Veganismo</label></div>
                     <div><input type="checkbox" name="" id=""><label for="">&nbsp;&nbsp;&nbsp;Dieta sin azúcar</label></div>
                     <div><input type="checkbox" name="" id=""><label for="">&nbsp;&nbsp;&nbsp;Dieta sin sal</label></div>
-                    <div style="margin-bottom: 1.563em;"><input type="checkbox" name="" id=""><label for="">&nbsp;&nbsp;&nbsp;Dieta sin sal</label></div>
+                    <div style="margin-bottom: 1.563em;"><input type="checkbox" name="" id=""><label for="">&nbsp;&nbsp;&nbsp;Dieta libre de lactosa</label></div>
 
                     <label for="">Preferencias</label>
                     <input type="text">
