--- a/registro.html
+++ b/registro.html
@@ -79,12 +79,12 @@
 
 <footer>
     <div>
-        <h6>Co-Fouders</h6>
+        <h6>Especialistas</h6>
         <ul>
-            <li>Diaz, Brenda</li>
-            <li>Eldahuk, Ibi</li>
-            <li>Fernández, Guadalupe</li>
-            <li>Navarro, Eliana</li>
+            <li>Lic. Brenda Díaz</li>
+            <li>Ing. Ibi Eldahuk</li>
+            <li>Ing. Guadalupe Fernández</li>
+            <li>Lic. Eliana Navarro</li>
         </ul>
     </div>
     <div>
