--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
 
     <main>
         <h1>PLANES DE ALIMENTACIÓN<br>SEGÚN TUS NECESIDADES</h1>
-        <p>Bienvenido a nuestra plataforma de planes de alimentación personalizados. Entendemos que cada persona es única, por lo que hemos diseñado planes adaptados a tus necesidades individuales.</p>
+        <p>Con nuestros planes de alimentación, podrás disfrutar de comidas deliciosas mientras trabajas en tus objetivos de salud y peso ideal.</p>
         <a href="registro.html" class="btn">¡Registrate gratis!</a>
         <img src="assets/filete-pollo-cubierto-sesamo-blanco-guisantes-tomates-brocoli-calabaza-plato-blanco-removebg-preview%201.png" alt="Plato saludable">
     </main>
